--- a/source/_posts/19/07/01/190701m074556.md
+++ b/source/_posts/19/07/01/190701m074556.md
@@ -1,5 +1,4 @@
----
-title: 190701 ( Log table ) 2019-07 # 190701m074556
+---title: 190701 ( Log table ) 2019-07 # 190701m074556
 date: 2019-07-01 07:45:56
 ---
 
@@ -16,6 +15,14 @@ date: 2019-07-01 07:45:56
   <ol>
     <li><strong>2019-07:</strong> <a href="#id190701m074557">Section</a>.</li>
     <li><strong>2019-07-01:</strong> <a href="#id190701m074558">Section</a>.</li>
+    <li><strong>2019-07-02:</strong> <a href="#id190702m064647">Section</a>.</li>
+    <li><strong>2019-07-03:</strong> <a href="#id190703m063139">Section</a>.</li>
+    <li><strong>2019-07-04:</strong> <a href="#id190704m064854">Section</a>.</li>
+    <li><strong>2019-07-05:</strong> <a href="#id190705m063721">Section</a>.</li>
+    <li><strong>2019-07-06:</strong> <a href="#id190706m065522">Section</a>.</li>
+    <li><strong>2019-07-07:</strong> <a href="#id190707m062154">Section</a>.</li>
+    <li><strong>2019-07-08:</strong> <a href="#id190708m062218">Section</a>.</li>
+    <li><strong>2019-07-xx:</strong> <a href="#xx">Section</a>.</li>
   </ol>
 </div>
 
@@ -24,13 +31,58 @@ date: 2019-07-01 07:45:56
   <div class="kwCloud">
     <div class="itm s2">Portfolio and Resume</div>
     <div class="itm s1">[ Art ]-[ graphic design ]</div>
+    <div class="itm s1">Exercising</div>
+    <div class="itm s1">Html</div>
+    <div class="itm s1">SVG</div>
+    <div class="itm s1">{ Sass }</div>
+    <div class="itm s1">{ CSS Variable }</div>
+    <div class="itm s1">{ HSL } color</div>
+    <div class="itm s1">{ RWD }</div>
+    <div class="itm s1">{ Vue }</div>
+    <div class="itm s1">{ Vue Loader }</div>
+    <div class="itm s1">{ Vue } ,, assets path</div>
+    <div class="itm s1">{ Vue } ,, { CSS Modules }</div>
   </div>
   <ol>
     <li><strong>By time:</strong>
       <ol>
         <li><strong>190701:</strong>
           <ol>
-            <li><strong>???:</strong></li>
+            <li><strong>Portfolio and Resume:</strong> Designing Resume site. Header finished.</li>
+          </ol>
+        </li>
+        <li><strong>190702:</strong>
+          <ol>
+            <li><strong>Portfolio and Resume:</strong> Designing Resume site. // Title, horizontal line, finished. // Sticky footer finished. // Making <code>Vue</code> component that served for different type of <code>SVG</code>.</li>
+          </ol>
+        </li>
+        <li><strong>190703:</strong>
+          <ol>
+            <li><strong>Portfolio and Resume:</strong> Designing Resume site. // Section heading SVG component. Using HSL color. // Restructure my color system, to support each value of HSL too along with HEX value, so I can tune the "S" part and "L" part for individual use case. // Spend a lot of time on thinking and testing since I many new things I never did it myself before, though I know it.</li>
+            <li><strong>Learning { CSS Variable } and { Sass } and testing them:</strong> Spend a lot of time on testing, since I never do these thing myself before, though I know it.</li>
+          </ol>
+        </li>
+        <li><strong>190704:</strong>
+          <ol>
+            <li><strong>Portfolio and Resume:</strong> Designing Resume site. // Resume page Mainly completed, the RWD structure is working good, and the info is mainly completed.</li>
+            <li><strong>Thinking about the RWD thing:</strong> After the experience of the first page (Resume page), now I know when page shrink to the mobile screen, it can be tricky since the structure can changes dramastically sometimes. So I better rethink carefully before dive into the second page (Portfolio page).</li>
+          </ol>
+        </li>
+        <li><strong>190705:</strong>
+          <ol>
+            <li><strong>Portfolio and Resume:</strong> Designing Resume site. // Portfolio page. First section's structure, structure is half finish, but still have long way to go. Writing data logic so the data is seperate from template.</li>
+            <li><strong>{ Vue Loader }, assets path , { CSS Modules } in vue.</strong></li>
+          </ol>
+        </li>
+        <li><strong>190706:</strong>
+          <ol>
+            <li><strong>Portfolio and Resume:</strong> Designing Resume site. // Portfolio page. First section's (info of my projects) finished, now RWD working from desktop to mobile. The mobile version is hard to deal with since I brute forced using <code>position: absolute</code> to to make deeply nested elements break to outside root element. // Image auto slideshow is working, data logic is on process.</li>
+          </ol>
+        </li>
+        <li><strong>190707:</strong>
+          <ol>
+            <li><strong>Portfolio and Resume:</strong> Designing Resume site. // Portfolio page. First section's Modal and data logic.</li>
+            <li><strong>Found my phone battery inflate because of constantly charging.</strong></li>
           </ol>
         </li>
       </ol>
@@ -43,18 +95,267 @@ date: 2019-07-01 07:45:56
   <div class="kwCloud">
     <div class="itm s1">Portfolio and Resume</div>
     <div class="itm s1">Exercising</div>
+    <div class="itm s1">{ Vue }</div>
   </div>
   <ol>
+    <li><strong>( K-pop ) Confessions Of A Former K-pop Idol (ft. Crayon Pop) | ASIAN BOSS:</strong> <a href="https://youtu.be/KdOA5BCwBi0">Link</a>.</li>
+    <li><strong>{ Kevin Powell } -  Create a responsive navigation with no JS!:</strong> <a href="https://youtu.be/8QKOaTYvYUA">Link</a>.</li>
+    <li><strong>( Vue ) { @click.native } - solve { router-link } interception issue:</strong> <a href="https://stackoverflow.com/questions/48644676/clicking-on-active-router-link">Link</a>.</li>
+    <li><strong>( Vue ) { @click } - passing argument and event at the same time to callback:</strong> <a href="https://v1.vuejs.org/guide/events.html">Link</a> (search for <code>$event</code>). --{ Sometimes we also need to access the original DOM event in an inline statement handler. You can pass it into a method using the special $event variable ... }--.</li>
+    <li><strong>( Javascript ) event.preventDefault() 與 event.stopPropagation() 的差異:</strong> <a href="https://dotblogs.com.tw/harry/2016/09/10/131956">Link</a>.</li>
+    <li><strong>( Vue ) Event Modifiers (事件修飾符):</strong> <a href="https://cythilya.github.io/2017/04/17/vue-methods-and-event-handling/">Link</a>.</li>
+    <li><strong>( Vue ) How to set a unique html ID for each component?:</strong> <a href="https://stackoverflow.com/questions/34950867/vue-js-how-to-set-a-unique-id-for-each-component-instance">Link</a>. // Use <code>v-bind:for="myId"</code> and <code>v-bind:id="myId"</code>.</li>
+    <li><strong>Google font free service:</strong> Google font free service, solves a lot of headache, since chinese font font file size is big (15 MB), google doing these things automatically in the background, and will only make download when necessary so the bandwidth it used is very small, and you just simply need to use this { @import url(...) } code to make it works. // Useage: Use it like { font-family: 'Noto Sans TC', sans-serif; }.</li>
     <li><strong>By time:</strong>
       <ol>
         <li><strong>06:25 Wake up.</strong></li>
         <li><strong>06:30 Uploading blog.</strong></li>
-        <li><strong>06:43 Exercising at home:</strong> <a href="https://youtu.be/cZnsLVArIt8">Brutal HIIT ladder workout - 20 minute HIIT workout at home</a>, and <code>plank</code>.</li>
+        <li><strong>06:43 Exercising at home:</strong> <a href="https://youtu.be/cZnsLVArIt8">Brutal HIIT ladder workout - 20 minute HIIT workout at home</a><del>, and <code>plank</code></del>.</li>
         <li><strong>07:02: Break.</strong></li>
         <li><strong>07:05: Taking shower.</strong></li>
         <li><strong>07:35 Designing Resume site:</strong> Wireframe. Finished.</li>
-        <li><strong>10:30 Cooking, keep working.</strong></li>
-        <li><strong>?? Cooking, eating.</strong></li>
+        <li><strong>10:30 Cooking, start working on coding.</strong></li>
+        <li><strong>11:10 Eating, watching video.</strong></li>
+        <li><strong>11:50 Designing Resume site:</strong> Wireframe finished, start working on coding. Setting up <code>Vue</code> environment.</li>
+        <li><strong>13:13 Watching video.</strong></li>
+        <li><strong>13:33 Designing Resume site:</strong> Header finished.</li>
+        <li><strong>18:20 Cooking.</strong></li>
+        <li><strong>18:57 Eating.</strong></li>
+        <li><strong>20:05 Bathroom.</strong></li>
+        <li><strong>20:15 Testing font:</strong> Using google font free service.</li>
+        <li><strong>20:55 Designing Resume site.</strong></li>
+        <li><strong>21:37 Eating fruit, watching video, brushing teeth.</strong></li>
+        <li><strong>22:30 Sleep.</strong></li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-07-02<a id="id190702m064647"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s1">Portfolio and Resume</div>
+    <div class="itm s1">SVG</div>
+    <div class="itm s1">Html</div>
+  </div>
+  <ol>
+    <li><strong>( SVG ) CSS effect vs SVG effect, which is more flexible?:</strong> <a href="http://slides.com/sarasoueidan/building-better-interfaces-with-svg#/58">Link</a>. // --{ Q: One question, do you do all those animations by coding or using any apps? I don't even know an app that generating SVG animations. }--, --{ A: (Sara Soueidan) I usually hand-code the animations. Libraries like GSAP and Snap.svg make animating SVGs much simpler and are easy to understand and learn. }--.</li>
+    <li><strong>Using css to make shapes:</strong> <a href="https://css-tricks.com/the-shapes-of-css/">Link</a>. --{ “People end up making graphics with CSS [instead of SVG], because for many use cases, it offers them more flexibility. Which is absurd.”— fantasai (@fantasai) January 31, 2015 }--.</li>
+    <li><strong>{ SvgOmg }-{ SVGO }-[ SVG optimizer ]:</strong> Clean up, and optimize SVG with optimizer like <code>SvgOmg</code> (<a href="https://github.com/svg/svgo">[ SVGO ]-[ github ]-[ nodejs ]</a>) or <a href="https://jakearchibald.github.io/svgomg/">svgomg online</a>.</li>
+    <li><strong>( SASS ) Differences between { Mixin } and { extend }:</strong> <a href="https://dotblogs.com.tw/leo_codespace/2018/06/25/174235">Link</a>. Not quite understand, because not sure the real use cases.</li>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>06:40 Wake up.</strong></li>
+        <li><strong>06:47 Uploading blog.</strong></li>
+        <li><strong>06:53 Reading articles about SVG.</strong></li>
+        <li><strong>07:35 Designing Resume site:</strong> Svg component, to wrap SVG image inside.</li>
+        <li><strong>10:20 Cooking, keep working.</strong></li>
+        <li><strong>10:55 Eating.</strong></li>
+        <li><strong>11:40 Testing SVG optimizer.</strong></li>
+        <li><strong>12:40 Designing Resume site:</strong> Svg component, to wrap SVG image inside.</li>
+        <li><strong>14:10 Bathroom, eating apple, brushing teeth.</strong></li>
+        <li><strong>14:35 Learning { SASS }.</strong></li>
+        <li><strong>15:02 Designing Resume site:</strong> Svg component, to wrap SVG image inside.</li>
+        <li><strong>15:13 Take a nap.</strong></li>
+        <li><strong>15:40 Designing Resume site:</strong> Sticky Footer.</li>
+        <li><strong>17:30 Designing Resume site:</strong> Resume page ,, title, the svg image.</li>
+        <li><strong>19:15 Cooking.</strong></li>
+        <li><strong>19:47 Eating, watching video, brushing teeth.</strong></li>
+        <li><strong>20:50 Designing Resume site:</strong> Resume page ,, title, horizontal line, finished.</li>
+        <li><strong>22:20 Watching video.</strong></li>
+        <li><strong>22:35 Sleep.</strong></li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-07-03<a id="id190703m063139"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s1">Portfolio and Resume</div>
+    <div class="itm s1">{ CSS Variable }</div>
+    <div class="itm s1">Website "theme" by { CSS Variable }</div>
+    <div class="itm s1">{ HSL } color</div>
+    <div class="itm s1">{ Sass } ,, numbers and units</div>
+    <div class="itm s1">{ Sass } ,, { Interpolation }</div>
+  </div>
+  <ol>
+    <li><strong>( CSS ) CSS Variable - Everything you need to know about CSS Variables - { freecodecamp }:</strong> <a href="https://www.freecodecamp.org/news/everything-you-need-to-know-about-css-variables-c74d922ea855/">Link</a>. See the section <u>Be Careful While Building Single Tokens</u>, I have this question comes out before, so <strong>you can't use</strong> <code>--myVar: 100;</code>, then <code>margin: var(--myVar)px;</code>, you have to always use <code>--myVar: 100;</code> then <code>margin: calc(var(--myVar) * 1px);</code>. // Also see the section <u>JavaScript</u>, Simply put, <strong>you can access CSS variables — both get and set — from JavaScript</strong>.</li>
+    <li><strong>( CSS ) How CSS Variable could play important rule in website Themes:</strong> <a href="https://medium.com/dev-channel/css-variables-no-really-76f8c91bd34e">Link</a>. See the section <u>Themes</u>, he collect all variable part intended together into the <code>:root{ ... }</code>, so if he want a new "theme", he can change the site looking in no time.</li>
+    <li><strong>( CSS ) CSS Variable and HSL color:</strong> <a href="How do I apply opacity to a CSS color variable?">Link</a>. The more interesting thing is not HSL part, but CSS Variable part. See those answers below, they are helpful. // --{ If a property contains one or more var() functions, and those functions are syntactically valid, the entire property’s grammar must be assumed to be valid at parse time. It is only syntax-checked at computed-value time, after var() functions have been substituted. }--.</li>
+    <li><strong>{ Sass } ,, numbers and units</strong> <a href="https://sass-lang.com/documentation/values/numbers#units">Link</a>. // --{ It’s almost always a bad idea to use interpolation with numbers. Interpolation returns unquoted strings that can’t be used for any further math, and it avoids Sass’s built-in safeguards to ensure that units are used correctly. }--, --{ Sass has powerful <strong>unit arithmetic</strong> that you can use instead. For example, instead of writing #{$width}px, write $width * 1px — or better yet, declare the $width variable in terms of px to begin with. }--. // --{ You can <strong>convert between decimals and percentages</strong> using unit arithmetic. $percentage / 100% will return the corresponding decimal, and $decimal * 100% will return the corresponding percentage. }--.</li>
+    <li><strong>{ Sass } ,, { Interpolation }:</strong> <a href="https://sass-lang.com/documentation/interpolation">Link</a>.</li>
+    <li><strong>( Color theory ) 色彩空間中的 HSL、HSV、HSB 有什麼區別？:</strong> <a href="https://www.zhihu.com/question/22077462">Link</a>. Conclusion: Currently don't think about <code>HSV</code>(= <code>HSB</code>), since HTML and CSS use <code>HSL</code> exclusive (it seems). The concept of <code>HSV</code>(= <code>HSB</code>) is that, it is abstraction and simplified version of <code>HSL</code>, thus some people might think it is "more intuitive", but at the same time, it don't reflect the real world of color, HSL does reflect the real world of color, if you turn a color really bright, it shoud have little <strong>satuation</strong>, this is reasonable and understandable.</li>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>06:25 Wake up.</strong></li>
+        <li><strong>06:32 Uploading blog.</strong></li>
+        <li><strong>06:42 Misc.</strong></li>
+        <li><strong>06:45 Designing Resume site:</strong> Resume page ,, fixing issus, refactoring.</li>
+        <li><strong>07:08 Designing Resume site:</strong> Resume page ,, section heading visual design redesign.</li>
+        <li><strong>08:10 Designing Resume site:</strong> Resume page ,, section heading SVG component.</li>
+        <li><strong>11:10 Grocery.</strong></li>
+        <li><strong>11:37 Cooking, understand HSV vs HSL:</strong> I'm planning to restructure my color system, to support each value of HSL too along with HEX value, so I can tune the "S" part and "L" part for individual use case.</li>
+        <li><strong>12:25 Eating, watching video.</strong></li>
+        <li><strong>13:00 Take a nap.</strong></li>
+        <li><strong>13:25 Testing HSL color with Css Variables.</strong></li>
+        <li><strong>15:00 Eating fruit.</strong></li>
+        <li><strong>15:10 Keep learning Css Variables:</strong> Theming with Css Varialbe.</li>
+        <li><strong>15:30 Testing { Sass } { Interpolation }.</strong></li>
+        <li><strong>16:00 Designing Resume site:</strong> Resume page ,, section heading SVG component. Using HSL color.</li>
+        <li><strong>19:20 Cooking.</strong></li>
+        <li><strong>19:40 Eating, watching video.</strong></li>
+        <li><strong>20:40 Testing { vue } ,, { slot }.</strong></li>
+        <li><strong>21:50 Eating apple, brushing teeth, watching video.</strong></li>
+        <li><strong>22:30 Sleep.</strong></li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-07-04<a id="id190704m064854"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s1">Portfolio and Resume</div>
+    <div class="itm s1">{ RWD }</div>
+    <div class="itm s1">Exercising</div>
+  </div>
+  <ol>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>06:45 Wake up.</strong></li>
+        <li><strong>06:50 Uploading blog.</strong></li>
+        <li><strong>07:00 Bathroom.</strong></li>
+        <li><strong>07:11 Testing 2 layer of slot instead just one:</strong> Testing if I can nested slots. So the test works, I can have 3 component - parent, a componentWithSlot1, a componentWithSlot2, then in the parent component I can put (inserting into slot) my final data inside componentWithSlot2 inside componentWithSlot1 inside parent. So the data will be rendered first (I guess), then componentWithSlot1, then componentWithSlot2, then parent.</li>
+        <li><strong>07:50 Designing Resume site:</strong> Resume page ,, section content, using nested (2 layer) { Vue }-{ slot} to try best to reduce the duplication of code.</li>
+        <li><strong>09:00 Exercising at home:</strong> <a href="https://youtu.be/cZnsLVArIt8">Brutal HIIT ladder workout - 20 minute HIIT workout at home</a>.</li>
+        <li><strong>09:20 Taking a break.</strong></li>
+        <li><strong>09:23 Taking a shower.</strong></li>
+        <li><strong>09:55 Cooking, keep working on Resume site.</strong></li>
+        <li><strong>10:40 Eating, watching video.</strong></li>
+        <li><strong>11:15 Designing Resume site:</strong> Resume page ,, section content.</li>
+        <li><strong>12:15 Brushing teeth.</strong></li>
+        <li><strong>12:22 Designing Resume site.</strong></li>
+        <li><strong>12:42 Take a nap.</strong></li>
+        <li><strong>13:05 Designing Resume site:</strong> Finished layout.</li>
+        <li><strong>15:17 Eating apple, brushing teeth.</strong></li>
+        <li><strong>15:30 Designing Resume site:</strong> Now I start to filling the information and the svg thumbnail image. Mainly completed, the RWD structure is working good, and the info is mainly completed.</li>
+        <li><strong>19:40 Cooking.</strong></li>
+        <li><strong>20:12 Eating, watching video.</strong></li>
+        <li><strong>21:10 Thinking about the RWD thing:</strong> After the experience of the first page (Resume page), now I know when page shrink to the mobile screen, it can be tricky since the structure can changes dramastically sometimes. So I better rethink carefully before dive into the second page (Portfolio page).</li>
+        <li><strong>21:45 Watching video.</strong></li>
+        <li><strong>21:20 Sleep.</strong></li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-07-05<a id="id190705m063721"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s1">Portfolio and Resume</div>
+    <div class="itm s2">{ Vue Loader }</div>
+    <div class="itm s1">{ Vue } ,, assets path</div>
+    <div class="itm s2">{ Vue } ,, { CSS Modules }</div>
+  </div>
+  <ol>
+    <li><strong>( Vue ) { Vue Loader }:</strong> <a href="https://vue-loader.vuejs.org/#what-is-vue-loader">Link</a>. Also see <a href="https://vue-loader.vuejs.org/spec.html#intro">Single-File Component (SFC)</a>.</li>
+    <li><strong>( Vue ) Asset URL Handling:</strong> <a href="https://vue-loader.vuejs.org/guide/asset-url.html#transform-rules">Link</a>.</li>
+    <li><strong>( Vue ) vue background-image use assets path?:</strong> <a href="https://github.com/vuejs/vue-loader/issues/481">Link</a>, <a href="https://wongyuye.github.io/2017/06/07/vue-%E6%89%93%E5%8C%85%E8%83%8C%E6%99%AF%E8%B7%AF%E5%BE%84%E9%97%AE%E9%A2%98/">link2</a>, <a href="https://www.jianshu.com/p/5e81814f8d8c">在Vue中使用sass及sass圖片路徑問題</a> . <strong>Finally found the solution by using that <code>require()</code> thing!!</strong> Since using <code>require(...)</code> might related to Webpack stuff, you load the path as "module way", and the system (webpack?) behind get the real path automatically for you. So now you can set style ,, <code>background-image: url(...)</code> like this - <code>'background-image': "url('" + require("@/assets/logo.png") + "')"</code> or <code>'background-image': "url('" + require("../assets/logo.png") + "')"</code>.</li>
+    <li><strong>( Vue ) Binding Inline Styles - Object Syntax:</strong> <a href="https://vuejs.org/v2/guide/class-and-style.html#Binding-Inline-Styles">Link</a>. I forget this again, reviewing. So what you could put inside v-bind:style="..." is <strong>an object!</strong>.</li>
+    <li><strong>{ Vue } ,, { CSS Modules }:</strong> <a href="https://www.netguru.com/codestories/vue.js-scoped-styles-vs-css-modules">Link</a> <a href="https://vue-loader.vuejs.org/guide/css-modules.html#usage">Doc</a>. --{ Every new Vue.js application created by vue-cli comes with two great built-in solutions: Scoped CSS and CSS Modules. Both of them have some pros and cons. }--. // --{ ... Moreover, because all classes are available through the <code>$style</code> object we can now pass them however deep we want using props, making it super easy to use a class in any place of the child component ... }--.</li>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>06:32 Wake up.</strong></li>
+        <li><strong>06:38 Uploading blog.</strong></li>
+        <li><strong>06:50 Designing Resume site:</strong> Portfolio page. Planning th e structure.</li>
+        <li><strong>10:30 Cooking.</strong></li>
+        <li><strong>11:05 Eating, watching video.</strong></li>
+        <li><strong>12:30 Take a nap.</strong></li>
+        <li><strong>13:00 Designing Resume site:</strong> Portfolio page. Working on first section's structure, structure is half finish, but still have long way to go.</li>
+        <li><strong>16:15 Grocery, eating fruit, Misc.</strong></li>
+        <li><strong>16:55 Learning { Vue Loader }.</strong></li>
+        <li><strong>17:43 Searching { vue } ,, css background-image ,, how to set it to correct assets path, problem:</strong> Problem solved, keep working.</li>
+        <li><strong>19:35 Cooking, keep working:</strong> Writing data logic so the data is seperate from template.</li>
+        <li><strong>20:10 Eating, watching video.</strong></li>
+        <li><strong>21:25 Misc.</strong></li>
+        <li><strong>22:40 Sleep.</strong></li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-07-06<a id="id190706m065522"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s1">Portfolio and Resume</div>
+  </div>
+  <ol>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>06:50 Wake up.</strong></li>
+        <li><strong>06:55 Uploading blog.</strong></li>
+        <li><strong>07:05 Bathroom.</strong></li>
+        <li><strong>07:15 Designing Resume site:</strong> Portfolio page. Dealing with background-image, background-position and background-size.</li>
+        <li><strong>08:57 Cooking, keep working.</strong></li>
+        <li><strong>09:45 Eating, watching video.</strong></li>
+        <li><strong>10:20 Designing Resume site:</strong> Working on RWD for mobile screen issue.</li>
+        <li><strong>13:30 Eating apple, watching video.</strong></li>
+        <li><strong>14:00 Designing Resume site:</strong> Working on RWD for mobile screen issue</li>
+        <li><strong>16:10 Take a nap.</strong></li>
+        <li><strong>16:35 Designing Resume site:</strong> Portfolio page. First section's data logic so the data is seperate from template.</li>
+        <li><strong>19:50 Cooking, keep working.</strong></li>
+        <li><strong>20:25 Eating, watching video.</strong></li>
+        <li><strong>22:10 Sleep.</strong></li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-07-07<a id="id190707m062154"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s1">Portfolio and Resume</div>
+    <div class="itm s1">Battery</div>
+  </div>
+  <ol>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>06:15 Wake up.</strong></li>
+        <li><strong>06:22 Uploading blog.</strong></li>
+        <li><strong>06:30 Bathroom.</strong></li>
+        <li><strong>06:43 Sending message to mom, misc.</strong></li>
+        <li><strong>07:30 Designing Resume site:</strong> Modal and data logic.</li>
+        <li><strong>08:35 Cooking.</strong></li>
+        <li><strong>09:15 Eating, watching video.</strong></li>
+        <li><strong>09:40 Found my phone battery inflate because of constantly charging:</strong> I always keep it plug in to usb to charge it, and I just curious why my phone is not flat at back side. When I open the back cover, it suprised me that the battery is inflate like crazy. And I found that it says "keeping it long time charging will risk to have explosion hazard" OMG, I don't know this.</li>
+        <li><strong>09:50 Designing Resume site:</strong> Modal ,, styling.</li>
+        <li><strong>12:37 Eating apple, watching video, brushing teeth.</strong></li>
+        <li><strong>12:57 Designing Resume site:</strong> Modal ,, styling.</li>
+        <li><strong>14:33 Take a nap.</strong></li>
+        <li><strong>15:00 Designing Resume site:</strong> Modal ,, data logic.</li>
+        <li><strong>19:25 Cooking, keep working.</strong></li>
+        <li><strong>20:05 Eating, watching viceo.</strong></li>
+        <li><strong>21:30 Taking shower.</strong></li>
+        <li><strong>22:05 Sleep.</strong></li>
+      </ol>
+    </li>
+  </ol>
+</div>
+
+<div class="h2">
+  <h2>2019-07-08<a id="id190708m062218"></a></h2>
+  <div class="kwCloud">
+    <div class="itm s1">Portfolio and Resume</div>
+  </div>
+  <ol>
+    <li><strong>By time:</strong>
+      <ol>
+        <li><strong>06:10 Wake up, misc.</strong></li>
+        <li><strong>06:23 Uploading blog.</strong></li>
+        <li><strong>06:?? Designing Resume site:</strong> Modal ,, data logic.</li>
+        <li><strong>?? Cooking.</strong></li>
+        <li><strong>?? Eating.</strong></li>
       </ol>
     </li>
   </ol>
@@ -63,7 +364,7 @@ date: 2019-07-01 07:45:56
 <hr>
 
 <div class="h2">
-  <h2>2019-07-??<a id="xx"></a></h2>
+  <h2>2019-07-xx<a id="xx"></a></h2>
   <div class="kwCloud">
     <div class="itm s1">??</div>
     <div class="itm s1">Portfolio and Resume</div>
@@ -80,7 +381,8 @@ date: 2019-07-01 07:45:56
         <li><strong>?? Wake up.</strong></li>
         <li><strong>?? Go exercising.</strong></li>
         <li><strong>?? Uploading blog.</strong></li>
-        <li><strong>?? Cooking, eating.</strong></li>
+        <li><strong>?? Cooking.</strong></li>
+        <li><strong>?? Eating.</strong></li>
       </ol>
     </li>
     <li><strong>:</strong> <a href="">Link</a>.</li>
